migrate PlantController, ForgotPasswordController and WateringController to full RestAPI